tests/errors/object_operator_without_whitespace.php
<?php

declare(strict_types=1);

$a = new \StdClass();
$a -> b;
